# sdql-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  benchmarks.xlsx  build.rs  cargo.toml  print_benches.sh
.cargo/: config.toml
benches/: tpch.rs
macros/: Cargo.toml
macros/src/: lib.rs
plots/: main.py  pyproject.toml
progs/tpch/: 1.sdql  10.sdql  11.sdql  12.sdql  13.sdql  14.sdql  15.sdql  16.sdql  17.sdql  18.sdql  19.sdql  2.sdql  20.sdql  21.sdql  22.sdql  3.sdql  4.sdql  5.sdql  7.sdql  8.sdql  9.sdql  q18.sdql  q3.sdql  q5.sdql  q6.sdql  q9.sdql
runtime/: Cargo.toml  cargo.toml
runtime/src/: bool.rs  date.rs  default.rs  hashmap.rs  int.rs  lib.rs  real.rs  record.rs  semiring.rs  smallvecdict.rs  varchar.rs  vecdict.rs
sdql_macro/: Cargo.toml
src/: cli.rs  exp.rs  frontend.rs  lib.rs  main.rs  runtime.rs  type.rs  utils.rs
src/backend/: codegen.rs  fmf.rs  mod.rs
src/frontend/: expr.rs  lexer.rs  mod.rs  tests.rs  type.rs
src/frontend/parser/: mod.rs  tests.rs
src/inference/: mod.rs  tests.rs
src/ir/: expr.rs  mod.rs  type.rs
src/q3/: mod.rs  parallel.rs  read.rs  read_arrow.rs  read_polars.rs  read_polars_unsafe.rs  sequential.rs  structs.rs  types.rs
src/runtime/: bool.rs  date.rs  hashmap.rs  load.rs  mod.rs  record.rs  varchar.rs
src/tpch/: _01.rs  _02.rs  _03.rs  _04.rs  _05.rs  _06.rs  _07.rs  _08.rs  _09.rs  _10.rs  _11.rs  _12.rs  _13.rs  _14.rs  _15.rs  _16.rs  _17.rs  _18.rs  _19.rs  _20.rs  _21.rs  _22.rs  mod.rs  q1.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q2.rs  q20.rs  q21.rs  q22.rs  q3.rs  q4.rs  (+8 more)
src/tpch/q3/: mod.rs  parallel.rs  sequential.rs
src/tpch/q6/: mod.rs  parallel.rs  sequential.rs
src/type_inference/: mod.rs
tests/: e2e.rs  macros.rs  tpch.rs
tests/results/tpch/SF_0.01/: 1.sdql  10.sdql  11.sdql  12.sdql  13.sdql  15.sdql  16.sdql  18.sdql  19.sdql  2.sdql  20.sdql  21.sdql  22.sdql  4.sdql  5.sdql  7.sdql  8.sdql  9.sdql  q18.result  q1_new.result  q3.result
tests/results/tpch/SF_1/: 1.sdql  11.sdql  12.sdql  13.sdql  15.sdql  16.sdql  18.sdql  19.sdql  2.sdql  20.sdql  21.sdql  22.sdql  3.sdql  4.sdql  5.sdql  7.sdql  8.sdql  9.sdql
wrapped/: cargo.toml
wrapped/src/: lib.rs
