[package]
name = "sdql"
version = "0.1.0"
edition = "2024"

[lib]
name = "sdql"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
#bincode = { version = "2.0.1", features = ["serde"] } # TODO
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1" # TODO eventually get rid, it's for runtime
chumsky = { git = "https://github.com/zesterer/chumsky.git", branch = "main" }
derive_more = { version = "2.0.1", features = ["display"] }
im-rc = "15.1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.10.0" # TODO eventually get rid, it's for runtime
syn = { version = "2.0", features = ["extra-traits", "full"] }
time = { version = "0.3.40", features = ["parsing"] }

sdql_runtime = { path = "runtime" } # TODO optional, only for binaries

[dev-dependencies]
approx = { package = "approxim", version = "0.6.4", features = ["ordered-float", "tuple_impl"] }
criterion = "0.5.1"

sdql_macros = { path = "macros" }

[[bench]]
name = "tpch"
harness = false
