[package]
name = "sdql_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = { package = "approxim", git = "https://github.com/amascolo/approxim", branch = "tuple", features = ["ordered-float", "tuple_impl"] }
arrayvec = "0.7.6"
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "mul", "display", "sum"] }
ordered-float = "5.0.0"
hashbrown = { version = "0.15.2", features = ["inline-more", "rayon"] }
paste = "1.0.15"
rayon = "1.10.0"
time = { version = "0.3.40", features = ["formatting", "parsing"] }
