[package]
name = "sdql_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = { package = "approxim", version = "0.6.4", features = ["ordered-float", "tuple_impl"] }
arrayvec = { version = "0.7.6", features = ["serde"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "mul", "display", "sum"] }
gxhash = "3.5.0"
hashbrown = { version = "0.15.2", features = ["inline-more", "rayon", "serde"] }
itertools = "0.14.0"
once_cell = "1.21.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
paste = "1.0.15"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = { version = "1.15.0", features = ["serde"] }
time = { version = "0.3.40", features = ["formatting", "parsing", "serde"] }
